# MapRandoVideos

./: .gitignore  Dockerfile  LICENSE  docker-compose.yaml
.github/workflows/: build_docker.yml
js/: script.js
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/templates/: edit.html  home.html  intro.html  login.html  navbar.html  tech.html  upload.html  video_listing.html
sql/: create.sql  insert_users.sql
