[package]
name = "map-rando-videos"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-files = "0.6.2"
askama = "0.12.1"
env_logger = "0.11.5"
clap = {version = "4.1.1", features=["derive"]}
git2 = "0.19.0"
object_store = {version = "0.10.2", features=["gcp"]}
log = "0.4.17"
serde_json = "1.0.122"
glob = "0.3.1"
serde = "1.0.204"