[package]
name = "map-rando-videos"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-files = "0.6.2"
askama = "0.12.1"
env_logger = "0.11.5"
clap = {version = "4.1.1", features=["derive", "env"]}
git2 = "0.19.0"
object_store = {version = "0.10.2", features=["gcp"]}
log = "0.4.17"
glob = "0.3.1"
serde = "1.0.204"
serde_json = "1.0.122"
strum = { version = "0.26", features = ["derive"] }
tokio = "1.38.1"
tokio-postgres = { version = "0.7.11", features=["with-chrono-0_4"] }
deadpool-postgres = "0.14.0"
anyhow = {version = "1.0.68", features = ["backtrace"]}
actix-web-httpauth = "0.8.2"
futures-util = "0.3.30"
async-compression = {version = "0.4.12", features = ["tokio", "gzip", "xz"]}
chrono = "0.4.38"
futures = "0.3.30"
lapin = "2.5.0"
deadpool-lapin = "0.12.1"
